Minor fixes: - Fix layout issues, particularly on mobiles (columns, model answer, text video) - Make several properties on gap fill page conditional so they only appear when relevant

--- a/modules/xerte/parent_templates/Nottingham/models_html5/columnPage.css
+++ b/modules/xerte/parent_templates/Nottingham/models_html5/columnPage.css
@@ -23,7 +23,7 @@
 		border-top:	0px;
 	}
 	
-	#columnHolder.mobile .column {
+	#columnHolder.mobile .column:not(:first-of-type) {
 		margin-top:	10px;
 		border-top:	1px solid gray;
 	}
